# MQTT-Based-Dashboard-for-Solar-Inverter

./: .gitignore  CMakeLists.txt  README.md  SolarDashboard (copy).css  SolarDashboard.css  SolarDashboard.css.progress  SolarDashboard.glade
include/: solarmon.h
src/: main.c  mainMQTT.c  meter.c  worker.c
